Refactor code-action logic